# iox2-log-archive-orchestrator

./: BUILD.bazel  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: log-archive-orchestrator-plan.md  log-archive-orchestrator-traceability.md
scripts/: coverage.sh
src/: cli.rs  client.rs  command.rs  config.rs  control.rs  control_api.rs  daemon.rs  error.rs  format.rs  lib.rs  main.rs  model.rs  state.rs  worker.rs
tests/: orchestrator_cli_tests.rs  state_and_worker_tests.rs
