# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache Software License 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0, or the MIT license
# which is available at https://opensource.org/licenses/MIT.
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test_suite")

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

rust_library(
    name = "iceoryx2-userland-log-archive-orchestrator",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "@crate_index//:anyhow",
        "@crate_index//:clap",
        "@crate_index//:dirs",
        "@crate_index//:ron",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:serde_yaml",
        "@crate_index//:toml",
    ],
)

rust_binary(
    name = "iox2-log-orchestrator",
    srcs = ["src/main.rs"],
    deps = [
        ":iceoryx2-userland-log-archive-orchestrator",
        "@crate_index//:better-panic",
        "@crate_index//:clap",
        "@crate_index//:human-panic",
    ],
)

rust_test_suite(
    name = "iceoryx2-userland-log-archive-orchestrator-tests",
    srcs = glob(["tests/**/*.rs"]),
    deps = [
        ":iceoryx2-userland-log-archive-orchestrator",
        "@crate_index//:tempfile",
    ],
)
