[package]
name = "iceoryx2-userland-log-archive-orchestrator"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Multi-stream recorder orchestration overlay for iceoryx2 log-archive"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DarrylGamroth/iox2-log-archive-orchestrator"

[[bin]]
name = "iox2-log-orchestrator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
# Pinned to upstream while the archive stack validates against a stable external baseline.
iceoryx2 = { git = "https://github.com/eclipse-iceoryx/iceoryx2", rev = "3107941ba2a40f2897c395289447d0f93664ad8c" }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_yaml = "0.9"
ron = "0.11"
toml = { version = "0.9.8", default-features = false, features = ["serde", "parse", "display"] }
dirs = "5.0"
better-panic = "0.3.0"
human-panic = "2.0.2"

[dev-dependencies]
tempfile = "3.12.0"
